---
source: tests/envuse_test.rs
expression: error
---
ProgramError {
    message: "ParseError: Type unknown is not valid type",
    span: Some(
        Span {
            start: 13,
            end: 25,
        },
    ),
    source: "\n            FOO: unknown\n        ",
    location: Some(
        ".envuse",
    ),
    cause: Some(
        ParseError {
            message: "Type unknown is not valid type",
            span: Span {
                start: 13,
                end: 25,
            },
        },
    ),
}
